[gd_scene load_steps=52 format=3 uid="uid://sdum4va6fbl0"]

[ext_resource type="Script" path="res://Scripts/boost_man.gd" id="1_f4e34"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="2_qe7s3"]
[ext_resource type="Script" path="res://Scripts/Camera_Target.gd" id="3_ys30a"]
[ext_resource type="AudioStream" uid="uid://77cro8bax4hg" path="res://Audio/SFX_explode.ogg" id="4_43ama"]
[ext_resource type="AudioStream" uid="uid://cqiyfdss8d1uy" path="res://Audio/SFX_win.ogg" id="5_wsglc"]
[ext_resource type="AudioStream" uid="uid://b2g4mnqh0wbva" path="res://Audio/SFX_engine.ogg" id="6_1u5rg"]
[ext_resource type="AudioStream" uid="uid://dj0ocfq4gceak" path="res://Audio/SFX_hiss.ogg" id="7_mn48g"]
[ext_resource type="AudioStream" uid="uid://c1lvybhukrjkx" path="res://Audio/SFX_boost.ogg" id="8_x8pul"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yudap"]
albedo_color = Color(0.898039, 0.839216, 0.282353, 1)

[sub_resource type="PrismMesh" id="PrismMesh_m81od"]
size = Vector3(1, 2, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m8pxr"]
height = 2.22487

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ptipm"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lki3e"]
material = SubResource("StandardMaterial3D_ptipm")

[sub_resource type="Gradient" id="Gradient_e7cpj"]
offsets = PackedFloat32Array(0, 0.178862, 0.707317)
colors = PackedColorArray(1, 1, 1, 1, 0.14902, 0.372549, 1, 0.654902, 0, 0, 1, 0.0392157)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hl0d0"]
gradient = SubResource("Gradient_e7cpj")

[sub_resource type="Curve" id="Curve_6e54p"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.480414, 0.473451), -0.446503, -0.446503, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_a0v77"]
curve = SubResource("Curve_6e54p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pgknn"]
direction = Vector3(0, -1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 3.0
initial_velocity_max = 3.0
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_a0v77")
color_ramp = SubResource("GradientTexture1D_hl0d0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_48lxv"]
transparency = 1
vertex_color_use_as_albedo = true

[sub_resource type="TorusMesh" id="TorusMesh_sp6tm"]
material = SubResource("StandardMaterial3D_48lxv")
rings = 8
ring_segments = 4

[sub_resource type="Gradient" id="Gradient_mfau7"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.239726, 0.585616)
colors = PackedColorArray(0.896623, 0.900399, 0.898983, 1, 0.249558, 0.266183, 0.259952, 1, 0.0699851, 0.090176, 0.0826086, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yl4bh"]
gradient = SubResource("Gradient_mfau7")

[sub_resource type="Curve" id="Curve_g84m7"]
_data = [Vector2(0.144594, 0.993805), 0.0, 0.0, 0, 0, Vector2(0.517072, 0.409734), -1.46625, -1.46625, 0, 0, Vector2(0.92059, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_toton"]
curve = SubResource("Curve_g84m7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mc3mi"]
direction = Vector3(0, -5, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0
damping_min = 3.0
damping_max = 3.0
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_toton")
color_ramp = SubResource("GradientTexture1D_yl4bh")
turbulence_enabled = true
turbulence_noise_scale = 1.0
turbulence_noise_speed = Vector3(0, 3, 0)
turbulence_noise_speed_random = 0.1
turbulence_influence_min = 0.0
turbulence_influence_max = 0.06
collision_mode = 1
collision_friction = 1.0
collision_bounce = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2o80u"]
vertex_color_use_as_albedo = true
emission = Color(0.239216, 0.341176, 0.282353, 1)
ao_light_affect = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_rkknb"]
material = SubResource("StandardMaterial3D_2o80u")
radius = 0.4
height = 0.9
radial_segments = 7
rings = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q0o71"]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_lu3fq"]
material = SubResource("StandardMaterial3D_q0o71")
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b1pci"]
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id="SphereMesh_00qpo"]
material = SubResource("StandardMaterial3D_b1pci")
radius = 0.2

[sub_resource type="Gradient" id="Gradient_61lww"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.0813008, 0.154472, 0.325203, 0.780822)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.870588, 0.027451, 1, 0.712155, 0, 0.0332145, 1, 0.277695, 0, 0.0129515, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vmm87"]
gradient = SubResource("Gradient_61lww")

[sub_resource type="Curve" id="Curve_xbiru"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.258433, 1), 0.0, 0.0, 0, 0, Vector2(0.662959, 0.420354), -3.14754, -3.14754, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_rl77k"]
curve = SubResource("Curve_xbiru")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_338l0"]
particle_flag_align_y = true
direction = Vector3(0, 0, -1)
spread = 90.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
damping_min = 5.0
damping_max = 30.0
scale_min = 0.6
scale_max = 0.8
scale_curve = SubResource("CurveTexture_rl77k")
color_ramp = SubResource("GradientTexture1D_vmm87")
collision_mode = 1
collision_friction = 1.0
collision_bounce = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g6mhg"]
vertex_color_use_as_albedo = true

[sub_resource type="BoxMesh" id="BoxMesh_d4cnw"]
material = SubResource("StandardMaterial3D_g6mhg")

[sub_resource type="Gradient" id="Gradient_wsums"]
colors = PackedColorArray(0.74902, 0.560784, 0.168627, 0.619608, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xqm4e"]
gradient = SubResource("Gradient_wsums")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ebi7e"]
gravity = Vector3(0, 0, 0)
scale_min = 0.9
scale_max = 0.9
color_ramp = SubResource("GradientTexture1D_xqm4e")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lh7xg"]
transparency = 1
vertex_color_use_as_albedo = true

[sub_resource type="PrismMesh" id="PrismMesh_ihd1l"]
material = SubResource("StandardMaterial3D_lh7xg")
size = Vector3(1, 2, 1)

[sub_resource type="Gradient" id="Gradient_ko3lb"]
offsets = PackedFloat32Array(0, 0.430894, 0.699187, 1)
colors = PackedColorArray(0.992157, 1, 1, 0, 0.352941, 0.356863, 0.396078, 1, 0.0196078, 0.0235294, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8m45q"]
gradient = SubResource("Gradient_ko3lb")

[sub_resource type="Curve" id="Curve_sh5xm"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.127856, 0.653982), 0.0, 0.0, 0, 0, Vector2(0.375952, 1), 0.0, 0.0, 0, 0, Vector2(0.630577, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_awdjv"]
curve = SubResource("Curve_sh5xm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xge2m"]
lifetime_randomness = 0.1
emission_shape = 3
emission_box_extents = Vector3(0.5, 1, 0.5)
direction = Vector3(0, 1, 0)
spread = 180.0
gravity = Vector3(0, 10, 0)
scale_curve = SubResource("CurveTexture_awdjv")
color_ramp = SubResource("GradientTexture1D_8m45q")
turbulence_enabled = true
turbulence_noise_scale = 2.0
turbulence_influence_min = 0.0
turbulence_influence_max = 0.12

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1iy2a"]
transparency = 1
vertex_color_use_as_albedo = true
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.1
ao_light_affect = 1.0
refraction_scale = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_scjs3"]
lightmap_size_hint = Vector2i(17, 9)
material = SubResource("StandardMaterial3D_1iy2a")

[sub_resource type="Environment" id="Environment_s0idu"]
background_mode = 1
background_color = Color(0.188235, 0.188235, 0.368627, 1)
fog_light_color = Color(1, 1, 1, 1)
fog_sky_affect = 0.0
fog_height = -5.0
fog_height_density = 5.0

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
continuous_cd = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_f4e34")

[node name="Camera" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
top_level = true
script = ExtResource("2_qe7s3")
target = NodePath("../Camera_Target")
lerp_speed = 0.1

[node name="Camera_Target" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -35)
script = ExtResource("3_ys30a")

[node name="Model" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_yudap")
mesh = SubResource("PrismMesh_m81od")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_m8pxr")

[node name="Boost_Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.20732, -0.663981)
light_color = Color(0.945098, 0.92549, 0.619608, 1)
light_energy = 6.0
light_size = 2.0
omni_range = 20.0

[node name="Fuel_Bar" type="ProgressBar" parent="."]
offset_left = 25.0
offset_top = 25.0
offset_right = 264.0
offset_bottom = 52.0
step = 0.1

[node name="Fuel_Level" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 1, 0, 0, 0, 0.1, 0, -0.350265, -0.5)
mesh = SubResource("BoxMesh_lki3e")

[node name="Audio" type="Node" parent="."]

[node name="Explosion_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_43ama")

[node name="Win_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_wsglc")

[node name="Engine_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_1u5rg")
volume_db = 10.0

[node name="Brake_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_1u5rg")
volume_db = 6.0

[node name="Hiss_L_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_mn48g")
volume_db = 12.0

[node name="Hiss_R_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_mn48g")
volume_db = 12.0

[node name="Boost_Audio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_x8pul")

[node name="Rocket_Boost" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
emitting = false
amount = 16
lifetime = 0.5
explosiveness = 0.03
randomness = 0.01
process_material = SubResource("ParticleProcessMaterial_pgknn")
draw_pass_1 = SubResource("TorusMesh_sp6tm")

[node name="Rocket_Thrust" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
emitting = false
amount = 40
lifetime = 2.0
explosiveness = 0.03
process_material = SubResource("ParticleProcessMaterial_mc3mi")
draw_pass_1 = SubResource("SphereMesh_rkknb")

[node name="Rocket_Thrust_Down" type="GPUParticles3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 1, 0)
emitting = false
amount = 40
lifetime = 2.0
explosiveness = 0.03
process_material = SubResource("ParticleProcessMaterial_mc3mi")
draw_pass_1 = SubResource("SphereMesh_rkknb")

[node name="Rocket_Thrust_Left" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.404, -1, 0)
emitting = false
amount = 16
lifetime = 0.7
explosiveness = 0.03
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_mc3mi")
draw_pass_1 = SubResource("SphereMesh_lu3fq")

[node name="Rocket_Thrust_Right" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.404, -1, 0)
emitting = false
amount = 16
lifetime = 0.7
explosiveness = 0.03
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_mc3mi")
draw_pass_1 = SubResource("SphereMesh_00qpo")

[node name="Explode" type="GPUParticles3D" parent="."]
emitting = false
amount = 60
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
collision_base_size = 0.1
trail_lifetime = 0.01
process_material = SubResource("ParticleProcessMaterial_338l0")
draw_pass_1 = SubResource("BoxMesh_d4cnw")

[node name="Trail" type="GPUParticles3D" parent="."]
emitting = false
amount = 4
lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_ebi7e")
draw_pass_1 = SubResource("PrismMesh_ihd1l")

[node name="Death_Smoke" type="GPUParticles3D" parent="."]
emitting = false
amount = 40
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_xge2m")
draw_pass_1 = SubResource("SphereMesh_scjs3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_s0idu")

[connection signal="body_entered" from="." to="." method="_collision"]
